Finish v1 of website.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,301 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@thesis{Haselsteiner2022:Dissertation,
+   author = {Andreas F. Haselsteiner},
+   doi = {10.26092/elib/1615},
+   institution = {University of Bremen},
+   title = {Offshore structures under extreme loads: A methodology to determine design loads},
+   year = {2022},
+   abbr={dissertation},
+   pdf = {Dissertation_Haselsteiner_2022.pdf},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{Haselsteiner2020a,
+   author = {Andreas F. Haselsteiner and Klaus-Dieter Thoben},
+   doi = {10.1016/j.renene.2020.04.112},
+   journal = {Renewable Energy},
+   pages = {1146-1157},
+   title = {Predicting wave heights for marine design by prioritizing extreme events in a global model},
+   volume = {156},
+   year = {2020},
+   abbr={journal},
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@article{Haselsteiner2014,
+   author = {Andreas F. Haselsteiner and Cole Gilbert and Z. Jane Wang},
+   doi = {10.1098/rsif.2014.0216},
+   issue = {95},
+   journal = {Journal of The Royal Society Interface},
+   pages = {20140216},
+   title = {Tiger beetles pursue prey using a proportional control law with a delay of one half-stride},
+   volume = {11},
+   year = {2014},
+   abbr={journal},
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+
+@article{Haselsteiner2021ECBenchmark2,
+   author = {Andreas F. Haselsteiner and Ryan G. Coe and Lance Manuel},
+   doi = {10.1016/j.oceaneng.2021.109111},
+   journal = {Ocean Engineering},
+   title = {A second benchmarking exercise on estimating extreme environmental conditions},
+   year = {2021},
+   abbr={journal},
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{Haselsteiner2021:Reducing,
+   author = {Andreas F. Haselsteiner and Ed Mackay and Klaus-Dieter Thoben},
+   doi = {10.1016/j.apor.2021.102936},
+   journal = {Applied Ocean Research},
+   pages = {102936},
+   title = {Reducing conservatism in highest density environmental contours},
+   volume = {117},
+   year = {2021},
+   abbr={journal},
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{Haselsteiner2022,
+   author = {Andreas F. Haselsteiner and Aljoscha Sander and Klaus-Dieter Thoben},
+   doi = {10.1115/OMAE2022-79081},
+   booktitle = {Proc. 41st International Conference on Ocean, Offshore and Artic Engineering (OMAE)},
+   organization = {American Society of Mechanical Engineers (ASME)},
+   title = {A three degrees of freedom vibration model for a partially installed wind turbine},
+   year = {2022},
+   abbr={conference},
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@inproceedings{Haselsteiner2017KDE,
+   author = {Andreas F Haselsteiner and Jan-Hendrik Ohlendorf and Klaus-Dieter Thoben},
+   city = {Bremen, Germany},
+   booktitle = {Proc. 13th German Wind Energy Conference (DEWEK)},
+   title = {Environmental contours based on kernel density estimation},
+   url = {https://arxiv.org/ftp/arxiv/papers/1710/1710.07156.pdf},
+   year = {2017},
+   abbr={conference},
+}
+
+@report{Haselsteiner2019:SKILLS,
+   author = {Andreas F. Haselsteiner and Stephan Oelker and Aljoscha Sander and Jan-Hendrik Ohlendorf},
+   institution = {Universität Bremen},
+   title = {Verbundvorhaben SKILLS - Teilvorhaben: Entwicklung und Simulation eines effizienten Feederschiffkonzepts für die Errichtung von Offshore-Windenergieanlagen. Schlussbericht der Universität Bremen},
+   year = {2019},
+   abbr={report},
+}
+
+@article{haselsteiner:2017hdc,
+   author = {Andreas F. Haselsteiner and Jan-Hendrik Ohlendorf and Werner Wosniok and Klaus-Dieter Thoben},
+   doi = {10.1016/j.coastaleng.2017.03.002},
+   journal = {Coastal Engineering},
+   pages = {42-51},
+   title = {Deriving environmental contours from highest density regions},
+   volume = {123},
+   year = {2017},
+   abbr={journal},
+}
+
+@inproceedings{Haselsteiner2019ICED,
+   author = {Andreas F. Haselsteiner and Rafael Reisenhofer and Jan-Hendrik Ohlendorf and Klaus-Dieter Thoben},
+   doi = {10.1017/dsi.2019.149},
+   booktitle = {Proc. 22nd International Conference on Engineering Design (ICED)},
+   pages = {1433-1442},
+   title = {Design for extremes: A contour method for defining requirements based on multivariate extremes},
+   year = {2019},
+   abbr={conference},
+}
+
+@inproceedings{Haselsteiner2020:OMAE,
+   author = {Andreas F. Haselsteiner and Aljoscha Sander and Jan-Hendrik Ohlendorf and Klaus-Dieter Thoben},
+   doi = {10.1115/OMAE2020-18668},
+   booktitle = {Proc. 39th International Conference on Ocean, Offshore and Arctic Engineering (OMAE)},
+   organization = {American Society of Mechanical Engineers (ASME)},
+   title = {Global hierarchical models for wind and wave contours: Physical interpretations of the dependence functions},
+   year = {2020},
+   abbr={conference},
+}
+
+@article{Haselsteiner2022:ViroconUpdate,
+   author = {Andreas F. Haselsteiner and Kai-Lukas Windmeier and Lena Ströer and Klaus-Dieter Thoben},
+   doi = {10.1016/j.softx.2022.101243},
+   journal = {SoftwareX},
+   pages = {101243},
+   title = {Update 2.0 to “ViroCon: A software to compute multivariate extremes using the environmental contour method”},
+   volume = {20},
+   year = {2022},
+   abbr={journal},
+}
+
+@article{Haselsteiner2022:ExtremeResponse,
+   author = {Andreas F. Haselsteiner and Malte Frieling and Ed Mackay and Aljoscha Sander and Klaus-Dieter Thoben},
+   doi = {10.1016/j.renene.2021.09.077},
+   journal = {Renewable Energy},
+   pages = {945-965},
+   title = {Long-term response of an offshore turbine: How accurate are contour-based estimates?},
+   volume = {181},
+   year = {2022},
+   abbr={journal},
+}
+
+
+@article{Haselsteiner2019Virocon,
+   author = {Andreas F. Haselsteiner and Jannik Lehmkuhl and Tobias Pape and Kai-Lukas Windmeier and Klaus-Dieter Thoben},
+   doi = {10.1016/j.softx.2019.01.003},
+   journal = {SoftwareX},
+   pages = {95-101},
+   title = {ViroCon: A software to compute multivariate extremes using the environmental contour method},
+   volume = {9},
+   year = {2019},
+   abbr={journal},
+}
+
+@inproceedings{Haselsteiner2019:OMAE,
+   author = {Andreas F. Haselsteiner and Ryan G. Coe and Lance Manuel and Phong T. T. Nguyen and Nevin Martin and Aubrey Eckert-Gallup},
+   doi = {10.1115/OMAE2019-96523},
+   journal = {Proc. 38th International Conference on Ocean, Offshore and Arctic Engineering (OMAE)},
+   publisher = {American Society of Mechanical Engineers (ASME)},
+   title = {A benchmarking exercise on estimating extreme environmental conditions: Methodology & baseline results},
+   year = {2019},
+   abbr={conference},
+}
+
+@inproceedings{Haselsteiner2018OMAE,
+   author = {Andreas F. Haselsteiner and Jan-Hendrik Ohlendorf and Stephan Oelker and Lena Ströer and Klaus-Dieter Thoben and Katharina Wiedemann and Emmanuel De Ridder and Sven Lehmann},
+   doi = {10.1115/OMAE2018-78659},
+   booktitle = {Proc. 37th International Conference on Ocean, Offshore and Arctic Engineering (OMAE)},
+   organization = {American Society of Mechanical Engineers (ASME)},
+   title = {Lifting wind turbine components from a floating vessel: A review on current solutions and open problems},
+   year = {2018},
+   abbr={conference},
+
+}
+@article{Haselsteiner2019Lifting,
+   author = {Andreas F. Haselsteiner and Jan-Hendrik Ohlendorf and Stephan Oelker and Lena Ströer and Klaus-Dieter Thoben and Katharina Wiedemann and Emmanuel De Ridder and Sven Lehmann},
+   doi = {10.1115/1.4042385},
+   issue = {5},
+   journal = {Journal of Offshore Mechanics and Arctic Engineering},
+   pages = {050801},
+   title = {Lifting wind turbine components from a floating vessel: A review on current solutions and open problems},
+   volume = {141},
+   year = {2019},
+   abbr={journal},
+}
+
+@article{Haselsteiner2021:BenchmarkingOE,
+   author = {Andreas F. Haselsteiner and Ryan G. Coe and Lance Manuel and Wei Chai and Bernt Leira and Guilherme Clarindo and Carlos Guedes Soares and Nikolay Dimitrov and Aljoscha Sander and Jan-Hendirk Ohlendorf and Klaus-Dieter Thoben and Guillaume de Hauteclocque and Ed Mackay and Philip Jonathan and Chi Qiao and Andrew Myers and Anna Rode and Arndt Hildebrandt and Boso Schmidt and Erik Vanem},
+   doi = {10.1016/j.oceaneng.2021.109504},
+   journal = {Ocean Engineering},
+   title = {A benchmarking exercise for environmental contours},
+   volume = {236},
+   year = {2021},
+   abbr={journal},
+}
+
+
+@article{Mackay2021:MarginalExceedance,
+   author = {Ed Mackay and Andreas F. Haselsteiner},
+   doi = {10.1016/j.marstruc.2020.102863},
+   journal = {Marine Structures},
+   title = {Marginal and total exceedance probabilities of environmental contours},
+   volume = {75},
+   year = {2021},
+   abbr={journal},
+}
+
+@article{Lentink2015,
+   author = {D. Lentink and A.F. Haselsteiner and R. Ingersoll},
+   doi = {10.1098/rsif.2014.1283},
+   issue = {104},
+   journal = {Journal of the Royal Society Interface},
+   title = {In vivo recording of aerodynamic force with an aerodynamic force platform: From drones to birds},
+   volume = {12},
+   year = {2015},
+   abbr={journal},
+}
+
+@article{Coe2022:OnLimiting,
+   author = {Ryan G Coe and Lance Manuel and Andreas F Haselsteiner},
+   doi = {10.1016/j.oceaneng.2022.113032},
+   journal = {Ocean Engineering},
+   pages = {113032},
+   title = {On limiting the influence of serial correlation in metocean data for prediction of extremes},
+   volume = {266},
+   year = {2022},
+   abbr={journal},
+}
+
+@article{Haselsteiner2017,
+   author = {A.F. Haselsteiner and J.-H. Ohlendorf and W. Wosniok and K.-D. Thoben},
+   doi = {10.1016/j.coastaleng.2017.03.002},
+   issn = {03783839},
+   journal = {Coastal Engineering},
+   title = {Deriving environmental contours from highest density regions},
+   volume = {123},
+   year = {2017},
+   abbr={journal},
+}
+
+
+@inproceedings{Mackay2021:ECBenchmark2,
+   author = {Ed Mackay and Ryan G. Coe and Andreas F. Haselsteiner and Lance Manuel},
+   doi = {10.1115/OMAE2021-64874},
+   booktitle = {Proc. 40th International Conference on Ocean, Offshore and Arctic Engineering (OMAE)},
+   organization = {American Society of Mechanical Engineerings (ASME)},
+   title = {A second benchmarking exercise on estimating extreme environmental conditions},
+   year = {2021},
+   abbr={conference},
+}
+
+@inproceedings{Stroer2022,
+   author = {Lena Ströer and Andreas F. Haselsteiner and Aljoscha Sander and Klaus-Dieter Thoben},
+   doi = {10.1115/OMAE2022-79203},
+   booktitle = {Proc. 41st International Conference on Ocean, Offshore and Artic Engineering (OMAE)},
+   organization = {American Society of Mechanical Engineers (ASME)},
+   title = {A statistical model of motion maxima of offshore wind turbine components during installation},
+   year = {2022},
+   abbr={conference},
+}
+
+@article{Haselsteiner2019,
+   author = {A.F. Haselsteiner and J. Lehmkuhl and T. Pape and K.-L. Windmeier and K.-D. Thoben},
+   doi = {10.1016/j.softx.2019.01.003},
+   issn = {23527110},
+   journal = {SoftwareX},
+   keywords = {Extreme value statistics,Marine structures,Probabilistic design},
+   title = {ViroCon: A software to compute multivariate extremes using the environmental contour method},
+   volume = {9},
+   year = {2019},
+   abbr={journal},
+}
+
+@article{Oelker2017,
+   author = {Stephan Oelker and Marco Lewandowski and Abderrahim Ait Alla and Jan-Hendrik Ohlendorf and Andreas Florian Haselsteiner},
+   journal = {Industrie 4.0 Management},
+   pages = {24-28},
+   title = {Logistikszenarien für die Errichtung von Offshore-Windparks: Herausforderungen der Wirtschaftlichkeitsbetrachtung neuer Logistikkonzepte},
+   volume = {33},
+   year = {2017},
+   abbr={journal},
+}
+
+@article{Hightower2017,
+   author = {Ben J. Hightower and Rivers Ingersoll and Diana D. Chin and Carl Lawhon and Andreas F. Haselsteiner and David Lentink},
+   doi = {10.1088/1748-3190/aa7eb2},
+   issue = {6},
+   journal = {Bioinspiration & Biomimetics},
+   pages = {064001},
+   title = {Design and analysis of aerodynamic force platforms for free flight studies},
+   volume = {12},
+   year = {2017},
+   abbr={journal},
+}
+
+@inproceedings{Sander2020,
+   author = {Aljoscha Sander and Andreas F. Haselsteiner and Kader Barat and Michael Janssen and Stephan Oelker and Jan-Hendrik Ohlendorf and Klaus-Dieter Thoben},
+   doi = {10.1115/OMAE2020-18935},
+   booktitle = {Proc. 39th International Conference on Ocean, Offshore and Arctic Engineering (OMAE)},
+   organization = {American Society of Mechanical Engineers (ASME)},
+   title = {Relative motion during single blade installation: Measurements from the North Sea},
+   year = {2020},
+   abbr={conference},
 }
