Add missing dot.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -214,7 +214,7 @@
 }
 
 @article{Coe2022:OnLimiting,
-   author = {Ryan G Coe and Lance Manuel and Andreas F Haselsteiner},
+   author = {Ryan G. Coe and Lance Manuel and Andreas F Haselsteiner},
    doi = {10.1016/j.oceaneng.2022.113032},
    journal = {Ocean Engineering},
    pages = {113032},
