--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -71,7 +71,7 @@
    city = {Bremen, Germany},
    booktitle = {Proc. 13th German Wind Energy Conference (DEWEK)},
    title = {Environmental contours based on kernel density estimation},
-   pdf = {https://arxiv.org/ftp/arxiv/papers/1710/1710.07156.pdf},
+   pdf = {DEWEK2017_EnvironmentalContoursBasedOnKDE.pdf},
    year = {2017},
    abbr={conference},
 }
