--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -179,6 +179,7 @@
    title = {Lifting wind turbine components from a floating vessel: A review on current solutions and open problems},
    volume = {141},
    year = {2019},
+   pdf = {JOMAE2019_LiftingWindTurbineComponentsFromAFloatingVesselAReviewOnCurrentSolutionsAndOpenProblems.pdf},
    abbr={journal},
 }
 
