--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
    institution = {University of Bremen},
    title = {Offshore structures under extreme loads: A methodology to determine design loads},
    year = {2022},
-   abbr={dissertation},
+   abbr = {dissertation},
    pdf = {Dissertation_Haselsteiner_2022.pdf},
 }
 
@@ -20,7 +20,8 @@
    title = {Predicting wave heights for marine design by prioritizing extreme events in a global model},
    volume = {156},
    year = {2020},
-   abbr={journal},
+   abbr = {journal},
+   pdf = {RenewableEnergy2020_PredictingWaveHeightsForMarineDesign.pdf}
 }
 
 @article{Haselsteiner2014,
@@ -32,7 +33,8 @@
    title = {Tiger beetles pursue prey using a proportional control law with a delay of one half-stride},
    volume = {11},
    year = {2014},
-   abbr={journal},
+   abbr = {journal},
+   pdf = {https://royalsocietypublishing.org/doi/pdf/10.1098/rsif.2014.0216}
 }
 
 
@@ -42,7 +44,8 @@
    journal = {Ocean Engineering},
    title = {A second benchmarking exercise on estimating extreme environmental conditions},
    year = {2021},
-   abbr={journal},
+   abbr = {journal},
+   pdf = {OceanEngineering2021_ASecondBenchmarkingExerciseOnEstimatingExtremeEC.pdf}
 }
 
 @article{Haselsteiner2021:Reducing,
@@ -53,7 +56,8 @@
    title = {Reducing conservatism in highest density environmental contours},
    volume = {117},
    year = {2021},
-   abbr={journal},
+   abbr = {journal},
+   pdf = {AOR2021_ReducingConservatism.pdf}
 }
 
 @inproceedings{Haselsteiner2022,
@@ -63,7 +67,8 @@
    organization = {American Society of Mechanical Engineers (ASME)},
    title = {A three degrees of freedom vibration model for a partially installed wind turbine},
    year = {2022},
-   abbr={conference},
+   abbr = {conference},
+   pdf = {OMAE2022-79081.pdf}
 }
 
 @inproceedings{Haselsteiner2017KDE,
@@ -71,9 +76,9 @@
    city = {Bremen, Germany},
    booktitle = {Proc. 13th German Wind Energy Conference (DEWEK)},
    title = {Environmental contours based on kernel density estimation},
-   pdf = {https://arxiv.org/ftp/arxiv/papers/1710/1710.07156.pdf},
    year = {2017},
    abbr={conference},
+   pdf = {https://arxiv.org/ftp/arxiv/papers/1710/1710.07156.pdf},
 }
 
 @report{Haselsteiner2019:SKILLS,
@@ -81,7 +86,8 @@
    institution = {Universität Bremen},
    title = {Verbundvorhaben SKILLS - Teilvorhaben: Entwicklung und Simulation eines effizienten Feederschiffkonzepts für die Errichtung von Offshore-Windenergieanlagen. Schlussbericht der Universität Bremen},
    year = {2019},
-   abbr={report},
+   abbr = {report},
+   pdf = {SKILLS2019_SchlussberichtUniBremen.pdf}
 }
 
 @article{haselsteiner:2017hdc,
@@ -92,7 +98,8 @@
    title = {Deriving environmental contours from highest density regions},
    volume = {123},
    year = {2017},
-   abbr={journal},
+   abbr = {journal},
+   pdf = {CEng2017_HighestDensityContour.pdf}
 }
 
 @inproceedings{Haselsteiner2019ICED,
@@ -123,7 +130,8 @@
    title = {Update 2.0 to “ViroCon: A software to compute multivariate extremes using the environmental contour method”},
    volume = {20},
    year = {2022},
-   abbr={journal},
+   abbr = {journal},
+   pdf = {SoftwareX2022_ViroCon_2p0.pdf}
 }
 
 @article{Haselsteiner2022:ExtremeResponse,
@@ -147,7 +155,8 @@
    title = {ViroCon: A software to compute multivariate extremes using the environmental contour method},
    volume = {9},
    year = {2019},
-   abbr={journal},
+   abbr = {journal},
+   pdf = {SoftwareX2019_ViroCon.pdf}
 }
 
 @inproceedings{Haselsteiner2019:OMAE,
@@ -233,7 +242,8 @@
    organization = {American Society of Mechanical Engineerings (ASME)},
    title = {A second benchmarking exercise on estimating extreme environmental conditions},
    year = {2021},
-   abbr={conference},
+   abbr = {conference},
+   pdf =  {https://www.osti.gov/servlets/purl/1855707}
 }
 
 @inproceedings{Stroer2022,
@@ -243,7 +253,8 @@
    organization = {American Society of Mechanical Engineers (ASME)},
    title = {A statistical model of motion maxima of offshore wind turbine components during installation},
    year = {2022},
-   abbr={conference},
+   abbr = {conference},
+   pdf = {OMAE2022-79203.pdf}
 }
 
 @article{Haselsteiner2019,
