Final batch of PDFs.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -109,7 +109,8 @@
    pages = {1433-1442},
    title = {Design for extremes: A contour method for defining requirements based on multivariate extremes},
    year = {2019},
-   abbr={conference},
+   abbr = {conference},
+   pdf = {https://www.cambridge.org/core/services/aop-cambridge-core/content/view/080869D78E3075156FB7A50FFDB32DB1/S2220434219001495a.pdf/design-for-extremes-a-contour-method-for-defining-requirements-based-on-multivariate-extremes.pdf}
 }
 
 @inproceedings{Haselsteiner2020:OMAE,
@@ -119,7 +120,8 @@
    organization = {American Society of Mechanical Engineers (ASME)},
    title = {Global hierarchical models for wind and wave contours: Physical interpretations of the dependence functions},
    year = {2020},
-   abbr={conference},
+   abbr = {conference},
+   pdf = {OMAE2020-8219_GlobalHierarchicalModels.pdf}
 }
 
 @article{Haselsteiner2022:ViroconUpdate,
@@ -166,7 +168,8 @@
    publisher = {American Society of Mechanical Engineers (ASME)},
    title = {A benchmarking exercise on estimating extreme environmental conditions: Methodology & baseline results},
    year = {2019},
-   abbr={conference},
+   abbr = {conference},
+   pdf = {https://www.osti.gov/servlets/purl/1641424}
 }
 
 @inproceedings{Haselsteiner2018OMAE,
@@ -176,7 +179,8 @@
    organization = {American Society of Mechanical Engineers (ASME)},
    title = {Lifting wind turbine components from a floating vessel: A review on current solutions and open problems},
    year = {2018},
-   abbr={conference},
+   abbr = {conference},
+   pdf = {OMAE2018-78659_LiftingWindTurbineComponents.pdf}
 
 }
 @article{Haselsteiner2019Lifting,
@@ -188,8 +192,8 @@
    title = {Lifting wind turbine components from a floating vessel: A review on current solutions and open problems},
    volume = {141},
    year = {2019},
+   abbr = {journal},
    pdf = {JOMAE2019_LiftingWindTurbineComponentsFromAFloatingVesselAReviewOnCurrentSolutionsAndOpenProblems.pdf},
-   abbr={journal},
 }
 
 @article{Haselsteiner2021:BenchmarkingOE,
@@ -200,6 +204,7 @@
    volume = {236},
    year = {2021},
    abbr={journal},
+   pdf = {OceanEngineering2021_ABenchmarkingExercise.pdf}
 }
 
 
@@ -210,7 +215,8 @@
    title = {Marginal and total exceedance probabilities of environmental contours},
    volume = {75},
    year = {2021},
-   abbr={journal},
+   abbr = {journal},
+   pdf = {MarineStructures2021_MarginalAndTotalExceedanceProbabilitesOfEnvironmentalContours.pdf}
 }
 
 @article{Lentink2015,
@@ -221,7 +227,8 @@
    title = {In vivo recording of aerodynamic force with an aerodynamic force platform: From drones to birds},
    volume = {12},
    year = {2015},
-   abbr={journal},
+   abbr = {journal},
+   pdf = {JRSI2015_AerodynamicForcePlatform.pdf}
 }
 
 @article{Coe2022:OnLimiting,
@@ -232,7 +239,8 @@
    title = {On limiting the influence of serial correlation in metocean data for prediction of extremes},
    volume = {266},
    year = {2022},
-   abbr={journal},
+   abbr = {journal},
+   pdf = {OceanEngineering2022_OnLimitingTheInfluenceOfSerialCorrelation.pdf}
 }
 
 @inproceedings{Mackay2021:ECBenchmark2,
@@ -257,18 +265,6 @@
    pdf = {OMAE2022-79203.pdf}
 }
 
-@article{Haselsteiner2019,
-   author = {A.F. Haselsteiner and J. Lehmkuhl and T. Pape and K.-L. Windmeier and K.-D. Thoben},
-   doi = {10.1016/j.softx.2019.01.003},
-   issn = {23527110},
-   journal = {SoftwareX},
-   keywords = {Extreme value statistics,Marine structures,Probabilistic design},
-   title = {ViroCon: A software to compute multivariate extremes using the environmental contour method},
-   volume = {9},
-   year = {2019},
-   abbr={journal},
-}
-
 @article{Oelker2017,
    author = {Stephan Oelker and Marco Lewandowski and Abderrahim Ait Alla and Jan-Hendrik Ohlendorf and Andreas Florian Haselsteiner},
    journal = {Industrie 4.0 Management},
@@ -276,7 +272,8 @@
    title = {Logistikszenarien für die Errichtung von Offshore-Windparks: Herausforderungen der Wirtschaftlichkeitsbetrachtung neuer Logistikkonzepte},
    volume = {33},
    year = {2017},
-   abbr={journal},
+   abbr = {journal},
+   pdf = {IndustrieManagement2017_Logistikszenarien.pdf}
 }
 
 @article{Hightower2017,
@@ -288,7 +285,8 @@
    title = {Design and analysis of aerodynamic force platforms for free flight studies},
    volume = {12},
    year = {2017},
-   abbr={journal},
+   abbr = {journal},
+   pdf = {https://iopscience.iop.org/article/10.1088/1748-3190/aa7eb2/pdf}
 }
 
 @inproceedings{Sander2020,
@@ -298,5 +296,6 @@
    organization = {American Society of Mechanical Engineers (ASME)},
    title = {Relative motion during single blade installation: Measurements from the North Sea},
    year = {2020},
-   abbr={conference},
+   abbr = {conference},
+   pdf = {OMAE2020-18935.pdf},
 }
