Add OMAE to repo for one-click PDF access.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -251,7 +251,7 @@
    title = {A second benchmarking exercise on estimating extreme environmental conditions},
    year = {2021},
    abbr = {conference},
-   pdf =  {https://www.osti.gov/servlets/purl/1855707}
+   pdf =  {OMAE2021-64874_EC_Benchmark2.pdf}
 }
 
 @inproceedings{Stroer2022,
