One-click PDF access for OMAE2019.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -169,7 +169,7 @@
    title = {A benchmarking exercise on estimating extreme environmental conditions: Methodology & baseline results},
    year = {2019},
    abbr = {conference},
-   pdf = {https://www.osti.gov/servlets/purl/1641424}
+   pdf = {OMAE2019-96523_ABechmarkingExerciseOnEstimatingExtremeEnvironmentalConditions.pdf}
 }
 
 @inproceedings{Haselsteiner2018OMAE,
