Fix OMAE2019 entry.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -164,8 +164,8 @@
 @inproceedings{Haselsteiner2019:OMAE,
    author = {Andreas F. Haselsteiner and Ryan G. Coe and Lance Manuel and Phong T. T. Nguyen and Nevin Martin and Aubrey Eckert-Gallup},
    doi = {10.1115/OMAE2019-96523},
-   journal = {Proc. 38th International Conference on Ocean, Offshore and Arctic Engineering (OMAE)},
-   publisher = {American Society of Mechanical Engineers (ASME)},
+   booktitle = {Proc. 38th International Conference on Ocean, Offshore and Arctic Engineering (OMAE)},
+   organization = {American Society of Mechanical Engineers (ASME)},
    title = {A benchmarking exercise on estimating extreme environmental conditions: Methodology & baseline results},
    year = {2019},
    abbr = {conference},
