Add link to benchmark repo:

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -169,7 +169,8 @@
    title = {A benchmarking exercise on estimating extreme environmental conditions: Methodology & baseline results},
    year = {2019},
    abbr = {conference},
-   pdf = {OMAE2019-96523_ABechmarkingExerciseOnEstimatingExtremeEnvironmentalConditions.pdf}
+   pdf = {OMAE2019-96523_ABechmarkingExerciseOnEstimatingExtremeEnvironmentalConditions.pdf},
+   website = {https://github.com/ec-benchmark-organizers/ec-benchmark}
 }
 
 @inproceedings{Haselsteiner2018OMAE,
@@ -204,7 +205,8 @@
    volume = {236},
    year = {2021},
    abbr={journal},
-   pdf = {OceanEngineering2021_ABenchmarkingExercise.pdf}
+   pdf = {OceanEngineering2021_ABenchmarkingExercise.pdf},
+   website = {https://github.com/ec-benchmark-organizers/ec-benchmark}
 }
 
 
