Add link to virocon repo.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -133,7 +133,8 @@
    volume = {20},
    year = {2022},
    abbr = {journal},
-   pdf = {SoftwareX2022_ViroCon_2p0.pdf}
+   pdf = {SoftwareX2022_ViroCon_2p0.pdf},
+      code = {https://github.com/virocon-organization/virocon}
 }
 
 @article{Haselsteiner2022:ExtremeResponse,
@@ -158,7 +159,8 @@
    volume = {9},
    year = {2019},
    abbr = {journal},
-   pdf = {SoftwareX2019_ViroCon.pdf}
+   pdf = {SoftwareX2019_ViroCon.pdf},
+   code = {https://github.com/virocon-organization/virocon}
 }
 
 @inproceedings{Haselsteiner2019:OMAE,
