Add code to papers where a repo exists.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,7 +21,8 @@
    volume = {156},
    year = {2020},
    abbr = {journal},
-   pdf = {RenewableEnergy2020_PredictingWaveHeightsForMarineDesign.pdf}
+   pdf = {RenewableEnergy2020_PredictingWaveHeightsForMarineDesign.pdf},
+   code =  {https://github.com/ahaselsteiner/2019-paper-predicting-wave-heights}
 }
 
 @article{Haselsteiner2014,
@@ -57,7 +58,8 @@
    volume = {117},
    year = {2021},
    abbr = {journal},
-   pdf = {AOR2021_ReducingConservatism.pdf}
+   pdf = {AOR2021_ReducingConservatism.pdf},
+   code = {https://github.com/ahaselsteiner/2020-paper-contour-conservatism}
 }
 
 @inproceedings{Haselsteiner2022,
@@ -68,7 +70,8 @@
    title = {A three degrees of freedom vibration model for a partially installed wind turbine},
    year = {2022},
    abbr = {conference},
-   pdf = {OMAE2022-79081.pdf}
+   pdf = {OMAE2022-79081.pdf},
+   code = {https://github.com/ahaselsteiner/2022-vibration-model}
 }
 
 @inproceedings{Haselsteiner2017KDE,
@@ -99,7 +102,8 @@
    volume = {123},
    year = {2017},
    abbr = {journal},
-   pdf = {CEng2017_HighestDensityContour.pdf}
+   pdf = {CEng2017_HighestDensityContour.pdf},
+   code = {https://github.com/ahaselsteiner/compute-hdc}
 }
 
 @inproceedings{Haselsteiner2019ICED,
@@ -110,7 +114,8 @@
    title = {Design for extremes: A contour method for defining requirements based on multivariate extremes},
    year = {2019},
    abbr = {conference},
-   pdf = {https://www.cambridge.org/core/services/aop-cambridge-core/content/view/080869D78E3075156FB7A50FFDB32DB1/S2220434219001495a.pdf/design-for-extremes-a-contour-method-for-defining-requirements-based-on-multivariate-extremes.pdf}
+   pdf = {https://www.cambridge.org/core/services/aop-cambridge-core/content/view/080869D78E3075156FB7A50FFDB32DB1/S2220434219001495a.pdf/design-for-extremes-a-contour-method-for-defining-requirements-based-on-multivariate-extremes.pdf},
+   code = {https://github.com/ahaselsteiner/iced2019}
 }
 
 @inproceedings{Haselsteiner2020:OMAE,
@@ -145,8 +150,9 @@
    title = {Long-term response of an offshore turbine: How accurate are contour-based estimates?},
    volume = {181},
    year = {2022},
-   abbr={journal},
-   pdf={RenewableEnergy2022_LongtermExtremeResponse.pdf}
+   abbr = {journal},
+   pdf = {RenewableEnergy2022_LongtermExtremeResponse.pdf},
+   code = {https://github.com/ahaselsteiner/2021-extreme-response}
 }
 
 
@@ -220,7 +226,8 @@
    volume = {75},
    year = {2021},
    abbr = {journal},
-   pdf = {MarineStructures2021_MarginalAndTotalExceedanceProbabilitesOfEnvironmentalContours.pdf}
+   pdf = {MarineStructures2021_MarginalAndTotalExceedanceProbabilitesOfEnvironmentalContours.pdf},
+   code = {https://github.com/ahaselsteiner/2020-note-on-contours}
 }
 
 @article{Lentink2015,
