Add ICED paper and slides.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,18 @@
 ---
 ---
 
+@inproceedings{Haselsteiner2023:ICED,
+   author = {Haselsteiner, Andreas F. and Thoben, Klaus-Dieter and Blessing, Lucienne},
+   booktitle = {Proceedings of the Design Society},
+   doi = {10.1017/pds.2023.115},
+   pages = {1147--1156},
+   title = {{Dealing with extreme requirement values: What methods to design school chairs and offshore wind turbines have in common}},
+   volume = {3},
+   year = {2023},
+   abbr = {conference},
+   pdf = {ICED2023_DealingWithExtremeRequirementValues.pdf},
+   slides = {ICED2023_DealingWithExtremeRequirementValues_slides.pdf}
+}
 
 @thesis{Haselsteiner2022:Dissertation,
    author = {Andreas F. Haselsteiner},
@@ -139,7 +151,7 @@
    year = {2022},
    abbr = {journal},
    pdf = {SoftwareX2022_ViroCon_2p0.pdf},
-      code = {https://github.com/virocon-organization/virocon}
+   code = {https://github.com/virocon-organization/virocon}
 }
 
 @article{Haselsteiner2022:ExtremeResponse,
