--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
    booktitle = {Proceedings of the Design Society},
    doi = {10.1017/pds.2023.115},
    pages = {1147--1156},
-   title = {{Dealing with extreme requirement values: What methods to design school chairs and offshore wind turbines have in common}},
+   title = {Dealing with extreme requirement values: What methods to design school chairs and offshore wind turbines have in common},
    volume = {3},
    year = {2023},
    abbr = {conference},
