Use single dash between page numbres.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
    author = {Haselsteiner, Andreas F. and Thoben, Klaus-Dieter and Blessing, Lucienne},
    booktitle = {Proceedings of the Design Society},
    doi = {10.1017/pds.2023.115},
-   pages = {1147--1156},
+   pages = {1147-1156},
    title = {Dealing with extreme requirement values: What methods to design school chairs and offshore wind turbines have in common},
    volume = {3},
    year = {2023},
@@ -22,6 +22,7 @@
    year = {2022},
    abbr = {dissertation},
    pdf = {Dissertation_Haselsteiner_2022.pdf},
+   slides = {ICED2023_DealingWithExtremeRequirementValues_slides.pdf}
 }
 
 @article{Haselsteiner2020a,
