Remove volume tag, remov test slides tag.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,13 +1,12 @@
----
----
+# bibtex often needs to be adapted when copied from Mendeley, e.g. proceedings
+# are not allowed to have a volume tag.
 
 @inproceedings{Haselsteiner2023:ICED,
    author = {Haselsteiner, Andreas F. and Thoben, Klaus-Dieter and Blessing, Lucienne},
-   booktitle = {Proceedings of the Design Society},
    doi = {10.1017/pds.2023.115},
+   booktitle = {Proceedings of the Design Society},
    pages = {1147-1156},
    title = {Dealing with extreme requirement values: What methods to design school chairs and offshore wind turbines have in common},
-   volume = {3},
    year = {2023},
    abbr = {conference},
    pdf = {ICED2023_DealingWithExtremeRequirementValues.pdf},
@@ -22,7 +21,6 @@
    year = {2022},
    abbr = {dissertation},
    pdf = {Dissertation_Haselsteiner_2022.pdf},
-   slides = {ICED2023_DealingWithExtremeRequirementValues_slides.pdf}
 }
 
 @article{Haselsteiner2020a,
