Change author format in hope of that al-folio will properly interpret it the ICED ref then.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,10 +1,10 @@
 # bibtex often needs to be adapted when copied from Mendeley, e.g. proceedings
-# are not allowed to have a volume tag.
+# are not allowed to have a volume tag or there should not be a comma between author first name and last name.
 
 @inproceedings{Haselsteiner2023:ICED,
-   author = {Haselsteiner, Andreas F. and Thoben, Klaus-Dieter and Blessing, Lucienne},
+   author = {Andreas F. Haselsteiner and Klaus-Dieter Thoben and Lucienne Blessing},
    doi = {10.1017/pds.2023.115},
-   booktitle = {Proceedings of the Design Society},
+   booktitle = {Proceedings of the Design Society (ICED23)},
    pages = {1147-1156},
    title = {Dealing with extreme requirement values: What methods to design school chairs and offshore wind turbines have in common},
    year = {2023},
