Show 2023 papers in publications overview.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,4 @@
-# bibtex often needs to be adapted when copied from Mendeley, e.g. proceedings
-# are not allowed to have a volume tag or there should not be a comma between author first name and last name.
+# Make sure that if you add an entry from a new year, you also add the year to the years list in publications.md 
 
 @inproceedings{Haselsteiner2023:ICED,
    author = {Andreas F. Haselsteiner and Klaus-Dieter Thoben and Lucienne Blessing},
