Add Databricks User Group talk.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,14 @@
 # Make sure that if you add an entry from a new year, you also add the year to the years list in publications.md 
 
+@misc{Haselsteiner2025:Databricks,
+  author = {Andreas F. Haselsteiner},
+  title = {A lakehouse for photovoltaic and wind data: Developing with Delta Live Tables and Databricks Asset Bundles},
+  year = {2025},
+  month = {January},
+  note = {Presented at the Databricks User Group},
+  slides = {2025-01-22_DatabricksUserGroup.pdf}
+}
+
 @inproceedings{Haselsteiner2023:ICED,
    author = {Andreas F. Haselsteiner and Klaus-Dieter Thoben and Lucienne Blessing},
    doi = {10.1017/pds.2023.115},
