--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,7 @@
   author = {Andreas F. Haselsteiner},
   title = {A lakehouse for photovoltaic and wind data: Developing with Delta Live Tables and Databricks Asset Bundles},
   year = {2025},
+  abbr = {tech talk},
   note = {Presented at the Databricks User Group Vienna #3},
   slides = {2025-01-22_DatabricksUserGroup.pdf}
 }
